# green-wealth

./: pyproject.toml
app/: __init__.py  app.py  database.py  environment.py  forms.py  models.py  prompts.py  utils.py
app/templates/: dashboard.html  home.html  login.html  signup.html  verify.html
